# ktexteditorpreviewplugin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Message.sh  kpartview.cpp  kpartview.h  ktexteditorpreview.json  ktexteditorpreviewplugin.cpp  ktexteditorpreviewplugin.h  ktexteditorpreviewview.cpp  ktexteditorpreviewview.h  org.kde.ktexteditorpreviewplugin.appdata.xml  previewwidget.cpp  previewwidget.h
src/kparts/markdown/: CMakeLists.txt  markdownbrowserextension.cpp  markdownbrowserextension.h  markdownpart.cpp  markdownpart.desktop  markdownpart.h  markdownpartfactory.cpp  markdownpartui.rc
src/lib/: CMakeLists.txt  KTextEditorPreviewConfig.cmake.in  documentpreviewplugin.cpp  documentpreviewplugin.h  documentpreviewwidget.cpp  documentpreviewwidget.h
src/libkmarkdownview/: CMakeLists.txt  kmarkdownview.cpp  kmarkdownview.h
src/libkmarkdownview/data/: webenginedata.qrc  webkitdata.qrc
src/plugin/: CMakeLists.txt  kpartview.cpp  ktexteditorpreviewplugin.cpp  ktexteditorpreviewplugin.h  ktexteditorpreviewview.cpp  previewwidget.cpp  previewwidget.h
src/previewplugins/: CMakeLists.txt
src/previewplugins/dot/: CMakeLists.txt  dotpreviewplugin.cpp  dotpreviewplugin.h  dotpreviewplugin.json  dotpreviewwidget.cpp  dotpreviewwidget.h
src/previewplugins/markdown/: CMakeLists.txt  documentproxy.cpp  documentproxy.h  markdownpreviewpage.cpp  markdownpreviewpage.h  markdownpreviewplugin.cpp  markdownpreviewplugin.h  markdownpreviewplugin.json  markdownpreviewwidget.cpp  markdownpreviewwidget.h  markdownsourcedocument.cpp  markdownsourcedocument.h
src/previewplugins/markdown/data/: data.qrc
src/previewplugins/qtui/: CMakeLists.txt  qtuipreviewplugin.cpp  qtuipreviewplugin.h  qtuipreviewplugin.json  qtuipreviewwidget.cpp  qtuipreviewwidget.h
src/previewplugins/svg/: CMakeLists.txt  svgpreviewplugin.cpp  svgpreviewplugin.h  svgpreviewplugin.json  svgpreviewwidget.cpp  svgpreviewwidget.h
